syntax = "proto3";

service TutorService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc VerifyOTP(OTPRequest) returns (OTPResponse);
    rpc ResendOTP(OTPRequest) returns (OTPResponse);
    rpc FetchTutorData(EmptyRequest) returns (ResponseAllTutors);
    rpc ToggleBlock (ToggleBlockRequest) returns (ToggleBlockResponse);
    rpc AddStudents (AddStudentsRequest) returns (AddStudentsResponse);
}

message AddStudentsRequest {
    string userId = 1;
    string tutorId = 2;
    int32 tutorShare = 3;
}

message AddStudentsResponse {
    bool success = 1;
    string message = 2;
    bool status = 3;
}
message EmptyRequest {}

message ToggleBlockRequest {
    string tutorId = 1;
}

message ToggleBlockResponse {
    string message = 1;
    bool success = 2;
}

message ResponseAllTutors {
    repeated tutorData tutors = 1;
    bool success = 2;
}

message RegisterRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
}

message RegisterResponse {
    bool success = 1;
    string tempId = 2;
    string msg = 3;
    string email = 4;
    int32 status = 5;
}

message OTPRequest {
    string email = 1;
    string enteredOTP = 2;
    string tempId = 3;
}

message OTPResponse {
    bool success = 1;
    tutorData tutorData = 2;
    string message = 3;
    int32 status = 4;
    string accessToken=5;
    string refreshToken = 6;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    bool success = 1;
    tutorData tutorData = 2;
    string message = 3;
    int32 status = 4;
    string accessToken = 5;
    string refreshToken = 6;
    string _id = 7;
}

message tutorData{
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string password = 4;
    string _id = 5;
    bool isblocked = 6;
}